--- a/app/src/main/res/layout/activity_favorvideo.xml
+++ b/app/src/main/res/layout/activity_favorvideo.xml
@@ -36,6 +36,7 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/favv_title_layout"
         android:background="@color/activityBG"
+        android:clickable="true"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingBottom="20dp"
@@ -60,6 +61,7 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/favv_title_layout"
         android:background="@color/textColor"
+        android:clickable="true"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingBottom="20dp"
