--- a/app/src/main/res/layout/fragment_dynamic.xml
+++ b/app/src/main/res/layout/fragment_dynamic.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/activityBG"
+        android:clickable="true"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingBottom="33dp"
@@ -34,6 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/activityBG"
+        android:clickable="true"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingBottom="33dp"
@@ -57,6 +59,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/activityBG"
+        android:clickable="true"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingBottom="33dp"
