--- a/app/src/main/res/layout/fragment_favor.xml
+++ b/app/src/main/res/layout/fragment_favor.xml
@@ -8,6 +8,7 @@
         android:id="@+id/fav_nologin"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clickable="true"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingBottom="33dp"
@@ -31,6 +32,7 @@
         android:id="@+id/fav_noweb"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clickable="true"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingBottom="33dp"
@@ -54,6 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/activityBG"
+        android:clickable="true"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingBottom="33dp"
