--- a/app/src/main/res/layout/activity_videodetails.xml
+++ b/app/src/main/res/layout/activity_videodetails.xml
@@ -469,7 +469,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="视频不见了. . ."
+            android:text="视频不见了. . .\n可能是没有登录？"
             android:textSize="13sp" />
     </LinearLayout>
 </RelativeLayout>
