增加在线观看API，默认480P 增加在线播放逻辑 修改上一次提交的错误

--- a/app/src/main/res/layout/activity_qr.xml
+++ b/app/src/main/res/layout/activity_qr.xml
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/qr_title_layout"
             android:gravity="center"
-            android:text="由于技术原因\n视频暂不能用手表观看"
+            android:text="点击二维码在线观看"
             android:textColor="@color/mainColor"
             android:textSize="12sp" />
 
