--- a/app/src/main/res/layout/item_favor_box.xml
+++ b/app/src/main/res/layout/item_favor_box.xml
@@ -57,6 +57,8 @@
             android:layout_marginBottom="6dp"
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:textColor="@color/textcolor3" />
 
         <LinearLayout
