--- a/app/src/main/res/layout/item_news_share_video.xml
+++ b/app/src/main/res/layout/item_news_share_video.xml
@@ -125,30 +125,80 @@
         </RelativeLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_below="@+id/lisv_share_lay"
             android:layout_marginBottom="2dp"
-            android:layout_marginRight="10dp"
             android:layout_marginTop="4dp"
-            android:clickable="true"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/lisv_likebu"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_margin="2dp"
-                android:src="@drawable/icon_like" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:clickable="true"
+                android:orientation="horizontal"
+                android:visibility="invisible">
 
-            <TextView
-                android:id="@+id/lisv_like"
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:layout_margin="1dp"
-                android:gravity="center_vertical"
-                android:textSize="12sp" />
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_margin="2dp"
+                    android:src="@drawable/icon_like" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+                    android:layout_margin="1dp"
+                    android:gravity="center_vertical"
+                    android:textSize="12sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:clickable="true"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/lisv_replybu"
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:layout_margin="3dp"
+                    android:src="@drawable/icon_reply" />
+
+                <TextView
+                    android:id="@+id/lisv_reply"
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+                    android:layout_margin="1dp"
+                    android:gravity="center_vertical"
+                    android:textSize="12sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:clickable="true"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/lisv_likebu"
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:layout_margin="3dp"
+                    android:src="@drawable/icon_like" />
+
+                <TextView
+                    android:id="@+id/lisv_like"
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+                    android:layout_margin="1dp"
+                    android:gravity="center_vertical"
+                    android:textSize="12sp" />
+            </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
 </ScrollView>
