增加查看图片缩放功能

--- a/app/src/main/res/layout/activity_reply.xml
+++ b/app/src/main/res/layout/activity_reply.xml
@@ -75,7 +75,7 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/rp_tail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="30dp"
